# SingleCell_CLI

./: .gitignore  main.py  pyproject.toml
singlecell/cli/: cli_config.py
singlecell/core/: logger.py  test.py  yaml_config.py
singlecell/io/: loader.py
singlecell_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
