[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "singlecell-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
singlecell = "singlecell.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["singlecell*"]